--- a/.github/工作流程/blank.yml
+++ b/.github/工作流程/blank.yml
@@ -29,4 +29,6 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
-          echo test, and deploy your project.
+          echo test, and deploy your project
+          the end !!
+          
